force-app/main/default/objects/custom_create391__c/custom_create391__c.object-meta.xml
<CustomObject>
    <label>Custom created object391</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects391</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>