force-app/main/default/objects/custom_create391__c/fields/custom_create_391field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_391field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 391field522</label>
    <type>Checkbox</type>
</CustomField>