force-app/main/default/objects/custom_create391__c/fields/custom_create_391field600__c.field-meta.xml
<CustomField>
    <fullName>custom_create_391field600__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 391field600</label>
    <type>Checkbox</type>
</CustomField>